# crafting-handbook

./: Cargo.toml  README.md
compilers/zhu/zhu_ir/: README.md
compilers/zhu/zhu_ir/src/: lib.rs  main.rs
compilers/zhu/zhu_ir/src/builder/: mod.rs
compilers/zhu/zhu_ir/src/entities/: immediate.rs
compilers/zhu/zhu_ir/src/entities/function/: mod.rs
compilers/zhu/zhu_ir/src/entities/instruction/: mod.rs
compilers/zhu/zhu_ir/src/entities/util/: mod.rs
compilers/zhu/zhu_ir/src/formatter/: inst.rs
compilers/zhu/zhu_ir/src/frontend/: lexer.rs  parser.rs
compilers/zhu/zhu_ir/src/pass/opt/: mod.rs
compilers/zhu/zhu_ir/tests/: baseline_test.rs
compilers/zhu/zhu_ir/tests/baseline/binary_immi_inst/: mod.rs
compilers/zhu/zhu_opt/: Cargo.toml
compilers/zhu/zhu_opt/src/: lib.rs
compilers/zhu/zhu_opt/src/analysis/: mod.rs
compilers/zhu/zhu_opt/src/analysis/available_expr/: mod.rs
compilers/zhu/zhu_opt/src/analysis/cfg/: mod.rs
compilers/zhu/zhu_opt/src/analysis/domtree/: mod.rs
compilers/zhu/zhu_opt/src/analysis/rpo/: mod.rs
compilers/zhu/zhu_opt/src/analysis/use_chain/: mod.rs
compilers/zhu/zhu_opt/src/opt/dce/: is_critical.rs  mod.rs  post_domtree.rs
compilers/zhu/zhu_opt/src/opt/gvn/: mod.rs
compilers/zhu/zhu_opt/src/opt/lcm/: anticipate_expr.rs  critical_edge.rs  earliest.rs  later.rs  mod.rs  postponable_expr.rs  replacement.rs  used_expr.rs  will_be_available_expr.rs
compilers/zhu/zhu_opt/src/opt/licm/: mod.rs  natural_loop.rs
compilers/zhu/zhu_opt/src/opt/sscp/: lattices.rs  mod.rs
compilers/zhu/zhu_opt/tests/: opti_test.rs
(+25 files in other folders)
