[workspace]
members = [
    # Fpr web-backend
    "website/backend",
    # For Calculator toy lang
    "compilers/calculator",
    # For rustyc
    "compilers/rustyc/frontend",
    "compilers/rustyc/backend",
    "compilers/rustyc/interpreter",
    "compilers/rustyc/optimizer",
    # For Zhu IR
    "compilers/zhu/zhu_ir",
    "compilers/zhu/zhu_opt"


]
resolver = "2"
