[package]
name = "zhu_opt"
description = "Buildin Optimization for Zhu IR."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
serde = { version ="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
zhu_ir= { version = "*", path = "../zhu_ir"}

[dev-dependencies]
zhu_ir = { version = "*", path = "../zhu_ir" }